# rust-crypto-api

./: .gitmodules  Cargo.toml  Dockerfile  Dockerfile.buildroot  build.sh
examples/: test.rs
src/: algorithms.rs  aligned_buf.rs  discover.rs  lib.rs
src/af_alg/: mod.rs
src/cryptodev/: mod.rs  sys.rs
